# speeches

./: README.md
.github/workflows/: build-numpy-talk.yml
dictionaries-from-scratch/: dictionaries_from_scratch.tex  pyproject.toml  speech.ipynb
dictionaries-from-scratch/notebooks/: dictionary_naive.py
inside-scipy-rgi/: .editorconfig  .gitignore  Makefile  pyproject.toml
inside-scipy-rgi/src/: inside_scipy_rgi.tex
inside-scipy-rgi/static/code_samples/: compiler_directives.py  evaluate_linear.py  find_indices.py  rgi_example.py
inside-scipy-rgi/static/cython_annotations/: decorators_annotations.html  naive_cython_annotations.html  typed_annotations.html
milp/: .editorconfig  .gitignore  LICENSE  pyproject.toml
milp/notebooks/: mcdonalds.ipynb  visualtisation.ipynb
processes-and-threads/: .gitignore
processes-and-threads/code/: memory_process.py  memory_thread.py  multiple_processes.py  multiple_threads.py  simple_process.py  time_process.py  time_thread.py  timed.py
processes-and-threads/src/: processes_and_threads.tex
things-I-dont-worry-about-as-NumPy-does-them-for-me/: .gitignore  Makefile  numpy_talk.md  package-lock.json  package.json  presenterm.config.yaml  slides.md
