[project]
name = "milp"
version = "0.1.0"
description = "Speech about mixed integer linear programming"
readme = "README.md"
license = "BSD-3-Clause"
license-files = "LICENSE"
requires-python = ">=3.13"
dependencies = [
    "gilp>=2.1.0",
    "highspy>=1.10.0",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "pyomo[optional]>=6.9.1",
    "sympy>=1.13.3",
]
